trying to fix images on iphone

--- a/css/main.css
+++ b/css/main.css
@@ -188,6 +188,9 @@ h4+p {
   h1 {
     margin-top:100px;
   }
+  #beach-banner, .carousel-item {
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 500px) and (min-width: 415px) {
